--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,75 @@
 @import 'variables';
 
 body {
+  margin: 0;
+  font-family: sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+header {
+  background-color: #e2e2e2;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+
+  h1 {
+    margin: 0;
+  }
+
+  a {
+    margin-left: 20px;
+  }
+}
+
+.highlight {
   background-color: #ccc;
+  font-size: 30px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.promo-frete {
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px; 
+  padding: 10px;
 }
 
 .product {
-  background-color: #fff;
-  padding: 20px;
-  margin: 20px;
+  padding: 0 20px;
+  margin-top: 20px;
 
   h2 {
     margin: 0;
+  }
+
+  &:before {
+    content: '';
+    display: block;
+    background-color: #e2e2e2;
+    width: 100%;
+    height: 200px;
+  }
+}
+
+footer {
+  text-align: center;
+  background-color: #e2e2e2;
+  padding: 20px;
+  margin-top: 20px;
+
+  .title {
+    font-size: 30px;
   }
 }
 
